--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -212,13 +212,13 @@
         </script>
 
         <script id="ayudaTempl" type="text/x-jquery-tmpl">
-           <h3>Ayuda</h3>
+           <h3>¿Como busco recorridos?</h3>
            <h4>Campos de búsqueda</h4>
-           <p>Escriba directamente en los campos de texto del panel superior. Puede considerar interseccion de calles, calle y número o lugares de interes. Vea los ejemplos debajo de los campos de búsqueda.</p>
+           <p>Escriba directamente en los campos de texto del panel superior. Puede considerar intersección de calles, calle y número o lugares de interes. Vea los ejemplos debajo de los campos de búsqueda.</p>
            <h4>Click sobre el mapa</h4>
-           <p> hacer click directamente sobre el mapa para indicar el Origen y Destino de su búsqueda. Luego puede arrastrar los marcadores A o B para editar su ubicación.</p>
+           <p>Hacer click directamente sobre el mapa para indicar el Origen y Destino de su búsqueda. Luego puede arrastrar los marcadores A o B para editar su ubicación.</p>
            <h4>Lineas de micro</h4>
-           <p>Para buscar un recorrido completo de una linea de colectivo en particular, consulte la sección "Recorridos" aqui arriba.</p>
+           <p>Para buscar un recorrido completo de una linea de colectivo en particular, consulte la sección "Recorridos" aquí arriba.</p>
         </script>
 
         <script id="vacio1Templ" type="text/x-jquery-tmpl">
