--- a/templates/tracking.html
+++ b/templates/tracking.html
@@ -12,24 +12,24 @@
     }
     (function() {
         try {
-            piwikTracker = Piwik.getTracker("http://stats.cualbondi.com.ar/piwik/piwik.php", 4);
+            piwikTracker = Piwik.getTracker("http://stats.cualbondi.com.ar/piwik/piwik.php", 1);
             piwikTracker.trackPageView();
             piwikTracker.enableLinkTracking();
         } catch( err ) {}
     })();
 </script>
-<noscript><p><img src="http://stats.cualbondi.com.ar/piwik/piwik.php?idsite=4" style="border:0" alt="" /></p></noscript>
+<noscript><p><img src="http://stats.cualbondi.com.ar/piwik/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
 <!-- End Piwik Tracking Code -->
 
 <!-- Analytics -->
 <script type="text/javascript">
     var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-20703799-2']);
+    _gaq.push(['_setAccount', 'UA-20703799-1']);
     _gaq.push(['_setDomainName', 'cualbondi.com.ar']);
     _gaq.push(['_trackPageview']);
     (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
 </script>
