--- a/templates/404.html
+++ b/templates/404.html
@@ -1,40 +1,6 @@
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
-ERROR 404: Not Found
+{% extends "contenido.html" %}
+
+{% block bloque_izquierda %}
+    <h1>Uups! La página no pudo ser encontrada...</h1>
+    <p>Volver al <a href="/">inicio</a></p>
+{% endblock %}
