--- a/templates/500.html
+++ b/templates/500.html
@@ -1,40 +1,6 @@
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
-ERROR 500: Internal Server Error
+{% extends "contenido.html" %}
+
+{% block bloque_izquierda %}
+    <h1>Uups! Algo anduvo mal...</h1>
+    <p>Volver al <a href="/">inicio</a></p>
+{% endblock %}
