--- a/apps/core/static/css/buscador.css
+++ b/apps/core/static/css/buscador.css
@@ -7,6 +7,54 @@ div#mapa { width: 100%; height: 100%; }
     font-size: 0.985em;
 }
 
+
+.slider {
+    width: 160px;
+    display:inline-block;
+}
+
+.slider > .dragger {
+    background-position: -456px -118px;
+    background-image: url("{{ STATIC_URL }}img/glyphicons-halflings.png");
+    background-repeat: no-repeat;
+    width: 13px;
+    height: 27px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+
+    background-color: whiteSmoke;
+
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+    border-color: #E6E6E6 #E6E6E6 #BFBFBF;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+    border: 1px solid #BBB;
+    border-bottom-color: #A2A2A2;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
+    -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
+}
+
+.slider > .dragger:hover {
+    background: -webkit-linear-gradient(top, #8DCA09, #8DCA09);
+}
+
+.slider > .track {
+    background-color: #E6E6E6;
+    background-color: #D9D9D9 9;
+    background-image: none;
+    outline: 0;
+    -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15), 0 1px 2px rgba(0, 0, 0, .05);
+    -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15), 0 1px 2px rgba(0, 0, 0, .05);
+
+    height: 23px;
+}
+
 @media (min-width: 980px) {
     body { padding-top: 40px; overflow: hidden; }
     #bloque_izquierda {
