--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -32,6 +32,7 @@
                         <a id="button-origendestino" class="btn" title="Cambiar origen por destino"><i class="icon-refresh"></i></a>
                         <a id="button-ayuda" class="btn" title="Ayuda"><i class="icon-question-sign"></i></a>
                     </div>
+                    <input id="button-radio" type="text" size="5" data-slider="true" data-slider-range="100,1000" data-slider-step="100">
                     <button id="button-buscarinputs" class="btn btn-primary pull-right" title="Buscar recorridos" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
                     <div style="clear:both;"></div>
                     <hr>
@@ -98,6 +99,7 @@
 
 <script src="http://openlayers.org/api/OpenLayers.js"></script>
 <script src="{{ STATIC_URL }}js/jquery.RC4.min.js"></script>
+<script src="{{ STATIC_URL }}js/simple-slider.min.js"></script>
 <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
 <link rel="stylesheet" href="{{ STATIC_URL }}css/openlayers/style.css" type="text/css" />
