--- a/apps/core/static/css/buscador.css
+++ b/apps/core/static/css/buscador.css
@@ -7,10 +7,18 @@ div#mapa { width: 100%; height: 100%; }
     font-size: 0.985em;
 }
 
+#button-radio {
+    width: 160px;
+    height: 10px;
+    display: inline-block;
+    vertical-align: middle;
+}
 
 .slider {
     width: 160px;
     display:inline-block;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .slider > .dragger {
@@ -18,13 +26,12 @@ div#mapa { width: 100%; height: 100%; }
     background-image: url("{{ STATIC_URL }}img/glyphicons-halflings.png");
     background-repeat: no-repeat;
     width: 13px;
-    height: 27px;
+    height: 29px;
+    top: 7px !important;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-
     background-color: whiteSmoke;
-
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
     border-color: #E6E6E6 #E6E6E6 #BFBFBF;
     border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -51,8 +58,8 @@ div#mapa { width: 100%; height: 100%; }
     -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15), 0 1px 2px rgba(0, 0, 0, .05);
     -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15), 0 1px 2px rgba(0, 0, 0, .05);
-
-    height: 23px;
+    height: 15px;
+    top: 17px;
 }
 
 @media (min-width: 980px) {
