--- a/apps/core/static/css/buscador.css
+++ b/apps/core/static/css/buscador.css
@@ -10,6 +10,7 @@ div#mapa { width: 100%; height: 100%; }
 #button-radio {
     width: 160px;
     height: 10px;
+    margin-top: 10px;
     display: inline-block;
     vertical-align: middle;
 }
@@ -22,16 +23,25 @@ div#mapa { width: 100%; height: 100%; }
 }
 
 .slider > .dragger {
-    background-position: -456px -118px;
-    background-image: url("{{ STATIC_URL }}img/glyphicons-halflings.png");
-    background-repeat: no-repeat;
-    width: 13px;
-    height: 29px;
-    top: 7px !important;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
+    display: inline-block;
+    width: 16px;
+    height: 28px;
+    top: 9px !important;
+    margin-bottom: 0;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    color: #333;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
     background-color: whiteSmoke;
+    background-image: -moz-linear-gradient(top, white, #E6E6E6);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#E6E6E6));
+    background-image: -webkit-linear-gradient(top, white, #E6E6E6);
+    background-image: -o-linear-gradient(top, white, #E6E6E6);
+    background-image: linear-gradient(to bottom, white, #E6E6E6);
+    background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
     border-color: #E6E6E6 #E6E6E6 #BFBFBF;
     border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -46,8 +56,36 @@ div#mapa { width: 100%; height: 100%; }
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
 }
 
+.slider > .dragger:after {
+    content: '';
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    left: 1px; 
+    top: 5px;
+    background-position: -456px -118px;
+    background-image: url("../img/glyphicons-halflings.png");
+    background-repeat: no-repeat;
+}
+
 .slider > .dragger:hover {
-    background: -webkit-linear-gradient(top, #8DCA09, #8DCA09);
+    text-decoration: none;
+    background-color: #E6E6E6;
+    background-position: 0 -15px;
+    -webkit-transition: background-position 0.1s linear;
+    -moz-transition: background-position 0.1s linear;
+    -o-transition: background-position 0.1s linear;
+    transition: background-position 0.1s linear;
+}
+
+.slider > .dragger.dragging {
+    background-color: #E6E6E6;
+    background-color: #D9D9D9 9;
+    background-image: none;
+    outline: 0;
+    -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15), 0 1px 2px rgba(0, 0, 0, .05);
+    -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15), 0 1px 2px rgba(0, 0, 0, .05);
 }
 
 .slider > .track {
@@ -58,8 +96,12 @@ div#mapa { width: 100%; height: 100%; }
     -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15), 0 1px 2px rgba(0, 0, 0, .05);
     -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15), 0 1px 2px rgba(0, 0, 0, .05);
-    height: 15px;
-    top: 17px;
+    height: 14px;
+    top: 18px;
+    color: #333;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
 
 @media (min-width: 980px) {
