quitando errores de no-inicializacion del slider de radios

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -32,7 +32,7 @@
                         <a id="button-origendestino" class="btn" title="Cambiar origen por destino"><i class="icon-refresh"></i></a>
                         <a id="button-ayuda" class="btn" title="Ayuda"><i class="icon-question-sign"></i></a>
                     </div>
-                    <input id="button-radio" type="text" size="5" data-slider="true" data-slider-range="100,1000" data-slider-step="100">
+                    <input id="button-radio" type="text" size="5" value="300" data-slider="true" data-slider-range="100,1000" data-slider-step="100">
                     <button id="button-buscarinputs" class="btn btn-primary pull-right" title="Buscar recorridos" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
                     <div style="clear:both;"></div>
                     <hr>
