Probando un movimiento de publicidades

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -39,6 +39,17 @@
                     <button id="button-buscarinputs" class="btn btn-primary pull-right" title="Buscar recorridos" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
                     <div style="clear:both;"></div>
                     <hr>
+                    <div align="center" style="">
+                        <script type="text/javascript"><!--
+                        google_ad_client = "ca-pub-1193419141108967";
+                        /* Anuncio 234x60 n1 */
+                        google_ad_slot = "6889578320";
+                        google_ad_width = 234;
+                        google_ad_height = 60;
+                        //-->
+                        </script>
+                        <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+                    </div> 
                     <div id="sidebarResultados"></div>
                 </div>
                 <div class="tab-pane" id="2">
@@ -64,22 +75,11 @@
         </div>
     </div>
     <div id="bloque_derecha">
-        <div align="center" style="position:absolute; z-index: 1000; top: 0; right: 0;">
+        <div align="center" style="position:absolute; z-index: 1000; top: 0; right: 40%;">
             <script type="text/javascript"><!--
             google_ad_client = "ca-pub-1193419141108967";
             /* Anuncio 234x60 n1 */
             google_ad_slot = "0175038549";
-            google_ad_width = 234;
-            google_ad_height = 60;
-            //-->
-            </script>
-            <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
-        </div> 
-        <div align="center" style="position:absolute; z-index: 1000; bottom: 0; right: 0;">
-            <script type="text/javascript"><!--
-            google_ad_client = "ca-pub-1193419141108967";
-            /* Anuncio 234x60 n1 */
-            google_ad_slot = "6889578320";
             google_ad_width = 234;
             google_ad_height = 60;
             //-->
