Eliminar el (25%) que aparece al lado de los resultados de geocoder.

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -205,7 +205,7 @@
 
         <script id="itemSuggest" type="text/x-jquery-tmpl">
             <li id="sug${domId}{porNombre}">
-                <a class="marcarSuggest" href="#" data_geom="${geom}" data_id="${id}" data_domId="${domId}">${nombre} <span class="distancia">(${(precision*100).toFixed(2)}%)</span></a>
+                <a class="marcarSuggest" href="#" data_geom="${geom}" data_id="${id}" data_domId="${domId}">${nombre}<!-- ${(precision*100).toFixed(2)}% !--></a>
             </li>
         </script>
         <script id="itemSuggestVacio" type="text/x-jquery-tmpl">
