Boton de limpiar el mapa

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -34,6 +34,7 @@
                     </div>
                     <div class="btn-group">
                         <a id="button-origendestino" class="btn" title="Cambiar origen por destino"><i class="icon-refresh"></i></a>
+                        <a id="button-limpiar" class="btn" title="Limpiar Mapa"><i class="icon-trash"></i></a>
                         <a id="button-ayuda" class="btn" title="Ayuda"><i class="icon-question-sign"></i></a>
                     </div>
                     <button id="button-buscarinputs" class="btn btn-primary pull-right" title="Buscar recorridos" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
