ayuda en un modal para que no borre los resultados

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -37,6 +37,17 @@
                         <a id="button-limpiar" class="btn" title="Limpiar Mapa"><i class="icon-trash"></i></a>
                         <a id="button-ayuda" class="btn" title="Ayuda"><i class="icon-question-sign"></i></a>
                     </div>
+                    <div id="modal-ayuda" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                            <h3>Ayuda</h3>
+                        </div>
+                        <div id="modal-ayuda-content" class="modal-body">
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn" data-dismiss="modal" aria-hidden="true">Cerrar</button>
+                        </div>
+                    </div>
                     <button id="button-buscarinputs" class="btn btn-primary pull-right" title="Buscar recorridos" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
                     <div style="clear:both;"></div>
                     <hr>
