--- a/apps/core/static/css/buscador.css
+++ b/apps/core/static/css/buscador.css
@@ -7,6 +7,10 @@ div#mapa { width: 100%; height: 100%; }
     font-size: 0.985em;
 }
 
+#button-limpiar {
+    cursor: pointer;
+}
+
 #button-radio-container {
     height: 35px;
 }
