--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -34,7 +34,10 @@
                     </div>
                     <div class="btn-group">
                         <a id="button-origendestino" class="btn" title="Cambiar origen por destino"><i class="icon-refresh"></i></a>
-                        <a id="button-limpiar" class="btn" title="Limpiar Mapa"><i class="icon-trash"></i></a>
+                        <a class="btn" data-toggle="dropdown"><i class="icon-trash"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a id="button-limpiar" tabindex="-1">Limpiar todo</a></li>
+                        </ul>
                         <a id="button-ayuda" class="btn" title="Ayuda"><i class="icon-question-sign"></i></a>
                     </div>
                     <div id="modal-ayuda" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
