Agrega anuncios bajo el form de busqueda en conenido

--- a/templates/core/ver_ciudad.html
+++ b/templates/core/ver_ciudad.html
@@ -27,6 +27,19 @@
             <input type="text" name="hasta" class="input-medium" placeholder="ingrese destino...">
             <button type="submit" class="btn btn-primary"><i class="icon-search icon-white"></i> Buscar »</button>
         </form>
+        <div style="margin-left: 235px; display: inline-block;">
+            <script type="text/javascript"><!--
+            google_ad_client = "ca-pub-1193419141108967";
+            /* contenido_barra_busqueda_1 */
+            google_ad_slot = "1954140740";
+            google_ad_width = 468;
+            google_ad_height = 15;
+            //-->
+            </script>
+            <script type="text/javascript"
+            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+            </script>
+        </div>
     </div>
 
     {% if imagenes|length > 1 %}
