cambios en los anuncios

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -53,18 +53,20 @@
                     </div>
                     <button id="button-buscarinputs" class="btn btn-primary pull-right" title="Buscar recorridos" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
                     <div style="clear:both;"></div>
-                    <hr>
-                    <div align="center" style="">
+                    <div style="margin-top: 5px;">
                         <script type="text/javascript"><!--
                         google_ad_client = "ca-pub-1193419141108967";
-                        /* Anuncio 234x60 n1 */
-                        google_ad_slot = "6889578320";
-                        google_ad_width = 234;
-                        google_ad_height = 60;
+                        /* buscador_links_bajo_inputs_busqueda */
+                        google_ad_slot = "6244739547";
+                        google_ad_width = 468;
+                        google_ad_height = 15;
                         //-->
                         </script>
-                        <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
-                    </div> 
+                        <script type="text/javascript"
+                        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+                        </script>
+                    </div>
+                    <hr>
                     <div id="sidebarResultados"></div>
                 </div>
                 <div class="tab-pane" id="2">
