mejorando estilo del widget

--- a/templates/widget/v1/busqueda.html
+++ b/templates/widget/v1/busqueda.html
@@ -1,19 +1,29 @@
-<form target="_parent" method="GET" action="/mapa{% if ciudad %}/{{ ciudad.slug }}/{% endif %}" name="cb_form">
-    <span style="margin-right: 5px;">Buscar transporte en <strong>{{ciudad_actual.nombre}}</strong> desde</span>
-    <input type="text" name="desde" class="input-medium" placeholder="ingrese origen...">
-    <span style="margin-left: 5px; margin-right: 5px;">hasta</span>
-    <input type="text" name="hasta" class="input-medium" placeholder="ingrese destino...">
-    {% if ciudades %}
-        <select onChange="change(this.value)">
-        {% for c in ciudades %}
-            <option value="{{ c.slug }}">{{ c.nombre }}</option>
-        {% endfor %}
-        </select>
-        <script>
-            change(val) {
-                document.cb_form.action = "/mapa/"+val+"/";
-            }
-        </script>
-    {% endif %}
-    <button type="submit" class="btn btn-primary"><i class="icon-search icon-white"></i> Buscar »</button>
-</form>
+<html style="margin:0;padding:0;height:100px;width:200px">
+
+    <head>
+
+    </head>
+
+    <body style="margin:0;padding:0">
+
+        <form target="_parent" method="GET" action="/mapa/{% if ciudad %}{{ ciudad.slug }}{% else %}{{ ciudades.0.slug }}{% endif %}/" id="cb_form{% if ciudad %}_{{ ciudad.slug }}{% endif %}" style="margin:0;padding:0">
+            <input type="hidden" name="key" value="{{ key }}">
+            <input type="text" name="desde" placeholder="Desde" style="width:200px">
+            <br>
+            <input type="text" name="hasta" placeholder="Hasta" style="width:200px">
+            <br>
+            {% if ciudades %}
+                <select onChange='this.parentNode.action = "/mapa/"+this.value+"/"' style="width:120px;float:left">
+                {% for c in ciudades %}
+                    <option value="{{ c.slug }}">{{ c.nombre }}</option>
+                {% endfor %}
+                </select>
+            {% endif %}
+            <button type="submit" style="width:77px;float:right">Buscar</button>
+            <br>
+            <small style="float:right;font-size:10px;">Buscador cortesía de <a href="http://cualbondi.com.ar/">Cualbondi</a></small>
+        </form>
+
+    </body>
+
+</html>
