--- a/templates/widget/test.html
+++ b/templates/widget/test.html
@@ -9,10 +9,10 @@
         <h1>Widgets Test</h1>
 
         <h2>Iframe sin especificar ciudad</h2>
-        <script src="http://localhost:8080/widget/v1/busqueda.js?key=123456789"></script>
+        <script src="http://{{ current_site.domain }}/widget/v1/busqueda.js?key=123456789"></script>
         
         <h2>Iframe para ciudad de la plata</h2>
-        <script src="http://localhost:8080/widget/v1/busqueda.js?key=123456789&ciudad=la-plata"></script>
+        <script src="http://{{ current_site.domain }}/widget/v1/busqueda.js?key=123456789&ciudad=la-plata"></script>
 
     </body>
 
