--- a/apps/core/static/css/buscador.css
+++ b/apps/core/static/css/buscador.css
@@ -173,3 +173,7 @@ div#mapa { width: 100%; height: 100%; }
 div.pagination-centered {
     margin-bottom: 0px;
 }
+
+div.olForeignContainer {
+    z-index: 10;
+}
