markup comentarios condicionales

--- a/templates/core/ver_linea.html
+++ b/templates/core/ver_linea.html
@@ -42,7 +42,7 @@
     </table>
     <br />
 
-    <![if (!IE)|(gt IE 7)]>
+    <!--[if (!IE)|(gt IE 7)]-->
         <h3>Dejanos un comentario sobre la linea "{{linea_actual.nombre}}"</h3>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
@@ -58,7 +58,7 @@
         </script>
         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    <![endif]>
+    <!--[endif]-->
 {% endblock %}
 
 {% block custom_scripts %}
