--- a/templates/contenido.html
+++ b/templates/contenido.html
@@ -47,9 +47,9 @@
                         </script>
                     </div>
                     <!--CAJA DE FACEBOOK-->
-                    <![if (!IE)|(gt IE 7)]>
+                    <!--[if (!IE)|(gt IE 7)]-->
                         <div align="center" style="margin-bottom:15px;"><iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fcualbondi&amp;width=300&amp;height=360&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:300px; height:360px;" allowTransparency="true"></iframe></div>
-                    <![endif]>
+                    <!--[endif]-->
 
                     <div align="center" style="margin-bottom:15px;">
                         <script type="text/javascript"><!--
@@ -68,10 +68,10 @@
                     <!--CAJA DE TWITTER-->
                     <div align="center" style="margin-bottom:15px;">
                         <div style="width:300px;">
-                        <![if (!IE)|(gt IE 7)]>
+                        <!--[if (!IE)|(gt IE 7)]-->
                             <a class="twitter-timeline" href="https://twitter.com/CualBondi" data-widget-id="293142996935905280">Tweets por @CualBondi</a>
                             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                        <![endif]>
+                        <!--[endif]-->
                         </div>
                     </div>
 
