--- a/templates/core/ver_recorrido.html
+++ b/templates/core/ver_recorrido.html
@@ -45,7 +45,7 @@
         <br />
     {% endif %}
 
-    <![if (!IE)|(gt IE 7)]>
+    <!--[if (!IE)|(gt IE 7)]-->
         <h3>Dejanos un comentario sobre el recorrido "{{linea_actual.nombre}} {{recorrido_actual.nombre}}"</h3>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
@@ -61,5 +61,5 @@
         </script>
         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    <![endif]>
+    <!--[endif]-->
 {% endblock %}
