--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,9 @@
 	    <meta charset="utf-8">
         <link rel="icon" type="image/x-icon" href="{{ STATIC_URL }}img/favicon.png" />
     	<title>{% block title %}Cualbondi{% endblock %}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="{% block meta_content %}Buscador de recorridos de bondis, colectivos, micros en Argentina.{% endblock %}">
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="{{ STATIC_URL }}css/bootstrap.custom.min.css" rel="stylesheet" type="text/css" />
 
         <meta name="google-site-verification" content="NVSk_0zcZdYua2ILJ4L0DvspOCmHujouihZPlo3mDco">
