--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
 <hr>
-<div align="center">
-    <p>&copy; CualBondi.com.ar 2012 - Todos los derechos reservados.</p>
+<div>
+    <p>&copy; CualBondi.com.ar 2009 - 2013 Todos los derechos reservados.</p>
 </div>
