html5 align="center" deprecated

--- a/templates/contenido.html
+++ b/templates/contenido.html
@@ -33,7 +33,7 @@
             </div>
             <div id="bloque_derecha" class="span3">
                 {% block bloque_derecha %}
-                    <div align="center" style="margin-bottom:15px;">
+                    <div style="margin-bottom:15px;">
                         <script type="text/javascript"><!--
                         google_ad_client = "ca-pub-1193419141108967";
                         /* contenido_sidebar_1 */
@@ -48,7 +48,7 @@
                     </div>
                     <!--CAJA DE FACEBOOK-->
                     <!--[if (!IE)|(gt IE 7)]-->
-                        <div align="center" style="margin-bottom:15px;"><iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fcualbondi&amp;width=300&amp;height=360&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:300px; height:360px;" allowTransparency="true"></iframe></div>
+                        <div style="margin-bottom:15px;"><iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fcualbondi&amp;width=300&amp;height=360&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:300px; height:360px;" allowTransparency="true"></iframe></div>
                     <!--[endif]-->
 
                     <div align="center" style="margin-bottom:15px;">
@@ -66,7 +66,7 @@
                     </div>
 
                     <!--CAJA DE TWITTER-->
-                    <div align="center" style="margin-bottom:15px;">
+                    <div style="margin-bottom:15px;">
                         <div style="width:300px;">
                         <!--[if (!IE)|(gt IE 7)]-->
                             <a class="twitter-timeline" href="https://twitter.com/CualBondi" data-widget-id="293142996935905280">Tweets por @CualBondi</a>
