--- a/templates/core/agregar_linea.html
+++ b/templates/core/agregar_linea.html
@@ -33,7 +33,7 @@
 <!--            </div>-->
 <!--        </div>-->
 
-        <div align="center">
+        <div>
             <button type="submit" class="btn btn-success">Guardar cambios</button>
             <button class="btn">Cancelar</button>
         </div>
