--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -76,7 +76,7 @@
                     <hr>
                     <div id="sidebarResultadosPorNombre"></div>
                 </div>
-                <div align="center">
+                <div>
                     <script type="text/javascript"><!--
                     google_ad_client = "ca-pub-1193419141108967";
                     /* Anuncio 234x60 n1 */
@@ -92,7 +92,7 @@
         </div>
     </div>
     <div id="bloque_derecha">
-        <div align="center" style="position:absolute; z-index: 1000; top: 0; right: 40%;">
+        <div style="position:absolute; z-index: 1000; top: 0; right: 40%;">
             <script type="text/javascript"><!--
             google_ad_client = "ca-pub-1193419141108967";
             /* Anuncio 234x60 n1 */
