--- a/templates/core/ver_ciudad.html
+++ b/templates/core/ver_ciudad.html
@@ -20,7 +20,7 @@
 
     <h1>Ciudad de {{ciudad_actual.nombre}}</h1>
 
-    <div class="well" align="center">
+    <div class="well">
         <form method="GET" action="/mapa/{{ciudad_actual.slug}}/" class="form-inline" style="margin: 0px; font-size: 14px;">
             <span style="margin-right: 5px;">Buscar transporte en <strong>{{ciudad_actual.nombre}}</strong> desde</span>
             <input type="text" name="desde" class="input-medium" placeholder="ingrese origen...">
