html entities para el indicador de breadcrumb ">"

--- a/templates/core/ver_linea.html
+++ b/templates/core/ver_linea.html
@@ -12,8 +12,8 @@
 
 {% block bloque_izquierda %}
     <ul class="breadcrumb">
-        <li><a href="/">Inicio</a> <span class="divider">></span></li>
-        <li><a href="/{{ciudad_actual.slug}}">{{ciudad_actual.nombre}}</a><span class="divider">></span></li>
+        <li><a href="/">Inicio</a> <span class="divider">&gt;</span></li>
+        <li><a href="/{{ciudad_actual.slug}}">{{ciudad_actual.nombre}}</a><span class="divider">&gt;</span></li>
         <li class="active">{{linea_actual.nombre}}</li>
     </ul>
 
