--- a/templates/core/ver_ciudad.html
+++ b/templates/core/ver_ciudad.html
@@ -14,7 +14,7 @@
 
 {% block bloque_izquierda %}
     <ul class="breadcrumb">
-        <li><a href="/">Inicio</a> <span class="divider">></span></li>
+        <li><a href="/">Inicio</a> <span class="divider">&gt;</span></li>
         <li class="active">{{ciudad_actual.nombre}}</li>
     </ul>
 
