confusion en el nombre del bloque

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8">
         <link rel="icon" type="image/x-icon" href="{{ STATIC_URL }}img/favicon.png" />
     	<title>{% block title %}Cualbondi{% endblock %}</title>
-		<meta name="description" content="{% block meta_content %}Buscador de recorridos de bondis, colectivos, micros en Argentina.{% endblock %}">
+		<meta name="description" content="{% block meta_description %}Buscador de recorridos de bondis, colectivos, micros en Argentina.{% endblock %}">
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="{{ STATIC_URL }}css/bootstrap.custom.min.css" rel="stylesheet" type="text/css" />
