--- a/templates/core/editor_recorrido.html
+++ b/templates/core/editor_recorrido.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.2/leaflet.ie.css" />
 		<link rel="stylesheet" href="http://leaflet.github.com/Leaflet.draw/leaflet.draw.ie.css" />
 	<![endif]-->
-
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<script src="http://cdn.leafletjs.com/leaflet-0.6.2/leaflet.js"></script>
 	<script src="http://leaflet.github.com/Leaflet.draw/leaflet.draw.js"></script>
 </head>
@@ -17,6 +17,9 @@
 	<div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
 	
 	<script>
+		
+		// jquery.cookie.js
+		(function(d){"function"===typeof define&&define.amd?define(["jquery"],d):d(jQuery)})(function(d){function n(a){return a}function p(a){return decodeURIComponent(a.replace(k," "))}function l(a){0===a.indexOf('"')&&(a=a.slice(1,-1).replace(/\\"/g,'"').replace(/\\\\/g,"\\"));try{return e.json?JSON.parse(a):a}catch(c){}}var k=/\+/g,e=d.cookie=function(a,c,b){if(void 0!==c){b=d.extend({},e.defaults,b);if("number"===typeof b.expires){var g=b.expires,f=b.expires=new Date;f.setDate(f.getDate()+g)}c=e.json?JSON.stringify(c):String(c);return document.cookie=[e.raw?a:encodeURIComponent(a),"=",e.raw?c:encodeURIComponent(c),b.expires?"; expires="+b.expires.toUTCString():"",b.path?"; path="+b.path:"",b.domain?"; domain="+b.domain:"",b.secure?"; secure":""].join("")}c=e.raw?n:p;b=document.cookie.split("; ");for(var g=a?void 0:{},f=0,k=b.length;f<k;f++){var h=b[f].split("="),m=c(h.shift()),h=c(h.join("="));if(a&&a===m){g=l(h);break}a||(g[m]=l(h))}return g};e.defaults={};d.removeCookie=function(a,c){return void 0!==d.cookie(a)?(d.cookie(a,"",d.extend({},c,{expires:-1})),!0):!1}});
 		
 		// Load map and base layer
 		var cloudmadeUrl = 'http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/997/256/{z}/{x}/{y}.png',
@@ -72,9 +75,23 @@
 			drawnItems.addLayer(e.layer);
 		});
 
+		var jqxhrSave
 		// Guardar con estado saved en la base de datos via POST ajax
 		map.on('draw:edited', function (e) {
-			// TODO
+			try { jqxhrSave.cancel() } catch(err) {}
+			jqxhrSave = $.ajax({
+				"method": "POST",
+				"url":"",
+				"data": {
+					"mode": "save",
+					"geojson": JSON.stringify(drawnItems.getLayers()[0].toGeoJSON().geometry)
+					},
+				"beforeSend": function(xhr, settings) { 
+					xhr.setRequestHeader("X-CSRFToken", $.cookie('csrftoken') ); 
+					}
+			})
+			.done(function() { console.log("success"); })
+			.fail(function() { console.log("error"); })
 		});
 
 		// Add draw control to map
