--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -164,7 +164,10 @@
                             de ${inicio} a ${fin}
                             <br>
                             distancia: {% templatetag openvariable %}if long_pata{% templatetag closevariable %}${Math.round(long_pata)} m (pie) + {% templatetag openvariable %}/if{% templatetag closevariable %}${Math.round(long_bondi/100)/10} km (bondi)
-                            <span href="${url}" class="btn btn-mini" title="Ver información, horarios y paradas de la línea ${nombre}" target="_blank" style="position:absolute; top:0; right:0"><i class="icon-info-sign"></i></span>
+                            <span style="position:absolute;top:0;right:0">
+								<span href="${url}" class="btn btn-mini" title="Ver información, horarios y paradas de la línea ${nombre}" target="_blank"><i class="icon-info-sign"></i></span>
+								<span href="/editor/${id}" class="btn btn-mini" title="Editar recorrido" target="self"><i class="icon-pencil"></i></span>
+                            </span>
                         </div>
                     {% templatetag openvariable %}/each{% templatetag closevariable %}
                 </a>
